SEO: Update title and meta tags in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>فلك وآية - Astronomy App</title>
+  <title>فلك وآية - رحلة بين العلم والشعر والإيمان</title>
+  <meta name="description" content="استكشف أسرار الكون بجمع صور ناسا وبلاغة الشعر وعظمة الآيات الكونية.">
+  <meta name="keywords" content="فلك وآية, صور ناسا, شعر عربي, سهيل, الطارق, استضافة سعودية">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
