--- a/index.html
+++ b/index.html
@@ -3,16 +3,29 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="vite.svg" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>فلك وآية - رحلة بين العلم والشعر والإيمان</title>
   <meta name="description" content="استكشف أسرار الكون بجمع صور ناسا وبلاغة الشعر وعظمة الآيات الكونية.">
   <meta name="keywords" content="فلك وآية, صور ناسا, شعر عربي, سهيل, الطارق, استضافة سعودية">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
     href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;900&family=Cairo:wght@300;400;600;700;900&display=swap"
     rel="stylesheet">
+
+  <!-- Social Preview Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://astronomy-and-ayah.com/">
+  <meta property="og:title" content="فلك وآية - رحلة بين العلم والشعر والإيمان">
+  <meta property="og:description" content="استكشف أسرار الكون بجمع صور ناسا وبلاغة الشعر وعظمة الآيات الكونية.">
+  <meta property="og:image" content="https://astronomy-and-ayah.com/og-image.jpg">
+
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://astronomy-and-ayah.com/">
+  <meta property="twitter:title" content="فلك وآية - رحلة بين العلم والشعر والإيمان">
+  <meta property="twitter:description" content="استكشف أسرار الكون بجمع صور ناسا وبلاغة الشعر وعظمة الآيات الكونية.">
+  <meta property="twitter:image" content="https://astronomy-and-ayah.com/og-image.jpg">
 
   <style>
     /* Loading Screen Container - Optimized */
