--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   <meta name="keywords" content="فلك وآية, صور ناسا, شعر عربي, سهيل, الطارق, استضافة سعودية">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;900&family=Cairo:wght@300;400;600;700;900&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=Cairo:wght@200..1000&display=swap"
     rel="stylesheet">
+
 
   <!-- Social Preview Meta Tags -->
   <meta property="og:type" content="website">
