--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
   <title>فلك وآية - رحلة بين العلم والشعر والإيمان</title>
   <meta name="description" content="استكشف أسرار الكون بجمع صور ناسا وبلاغة الشعر وعظمة الآيات الكونية.">
   <meta name="keywords" content="فلك وآية, صور ناسا, شعر عربي, سهيل, الطارق, استضافة سعودية">
